# tutkija

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.example.toml  mypy.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  e2e-nightly.yml  release.yml  wheelhouse.yml
data/cache/: parsed_index.csv  pdf_index.csv
data/logs/: pdf_audit.csv
data/parsed/0f6c321fa8b7537b/: tei.xml  text.txt
data/parsed/10.1016_j.canlet.2012.11.050/: tei.xml  text.txt
data/parsed/10.1016_j.celrep.2013.08.028/: tei.xml  text.txt
data/parsed/10.1016_j.isci.2025.113579/: tei.xml  text.txt
data/parsed/10.1016_j.jmva.2022.105081/: tei.xml  text.txt
data/parsed/10.1016_j.semcancer.2014.04.002/: tei.xml  text.txt
data/parsed/10.1016_j.ygeno.2018.07.002/: tei.xml  text.txt
data/parsed/10.1093_jrsssc_qlad102/: tei.xml  (+1 more)
data/pdfs/: README.md
data/samples/: README.md
docs/: ARCHITECTURE.md  mittarit.md  pelisaannot.md  phase4_runbook.md  porttikokous-pohja.md
docs/adr/: 0000-template.md  0001-tyokalupino.md  0002-versionointi-ja-julkaisu.md  0003-screening-malli.md  0003-screening-model.md  0004-pdf-and-grobid.md  0004-rag-qa-pipeline.md  0005-rag-qa-pipeline.md  0006-writing-and-refs.md  0007-prisma-diagram.md  0008-orchestration-and-critic.md
docs/assets/: prisma_template.svg.j2
scripts/: README.md  audit.ps1  create_phase4_samples.py  validate_pdf_parse.py  validate_screen_log.py
src/la_pkg/: cli.py  schema.py
tests/: test_cli.py  test_cli_pdf.py  test_cli_screen.py  test_debug.py  test_grobid_client.py  test_merge.py  test_parse_pipeline.py  test_pdf_download.py  test_pdf_fetchers.py  test_schemas.py  test_screening_edge_cases.py  test_screening_model.py  test_screening_rules.py  test_search_openalex.py  test_search_pubmed.py  test_tei_extract.py
tests/data/: openalex_golden.json
tests/prisma/: __init__.py  test_cli_smoke.py  test_compute.py  test_render_python.py
tests/rag/: test_chunker.py  test_qa_smoke.py  test_retrieve.py
tests/write/: test_cli_smoke.py  test_compose.py  test_linkcheck.py  test_refs.py
tools/: requirements-wheelhouse.txt  run_vaihe4.ps1  seed_urls.csv
(+123 files in other folders)
