[project]
name = "tutkija"
version = "0.0.1"
description = "Moniagenttinen kirjallisuuskatsaus, Tutkija"
readme = "README.md"
authors = [{ name = "Tutkija-tiimi" }]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pandas>=2.2",
  "pyarrow>=16.1",
  "rapidfuzz>=3.8",
  "feedparser>=6.0",
  "numpy>=1.26",
  "scikit-learn>=1.4"
]

[project.scripts]
la = "la_pkg.cli:app"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.optional-dependencies]
asreview = ["asreview>=1.5"]
